--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,30 +2,31 @@ html, body {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#4c53a8), color-stop(#6170b2), color-stop(#768dbd), color-stop(#8ca9c7), color-stop(#a1c6d2), color-stop(#b6e3dc), color-stop(#a1cad8), color-stop(#8db0d3), color-stop(#7897cf), color-stop(#637dcb), color-stop(#4f64c6), to(#3a4ac2));
   background-image: linear-gradient(to top, #4c53a8, #6170b2, #768dbd, #8ca9c7, #a1c6d2, #b6e3dc, #a1cad8, #8db0d3, #7897cf, #637dcb, #4f64c6, #3a4ac2);
   background-repeat: no-repeat;
+  background-attachment: fixed;
   width: 100%;
   height: 100%;
   background-size: cover;
   font-family: 'Pangolin', cursive !important;
 }
 
-html .navbar-expand-lg, body .navbar-expand-lg {
+html .navbar-expand-lg, html .dropdown-menu, body .navbar-expand-lg, body .dropdown-menu {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#3c4042), color-stop(#4c5253), color-stop(#5c6464), color-stop(#6b7675), color-stop(#2d2f30), to(#1d1d1f));
   background-image: linear-gradient(to top, #3c4042, #4c5253, #5c6464, #6b7675, #2d2f30, #1d1d1f);
   padding: 0 !important;
   font-family: 'Ruslan Display', cursive;
 }
 
-html .navbar-expand-lg ul, body .navbar-expand-lg ul {
+html .navbar-expand-lg ul, html .navbar-expand-lg a.dropdown-item, html .dropdown-menu ul, html .dropdown-menu a.dropdown-item, body .navbar-expand-lg ul, body .navbar-expand-lg a.dropdown-item, body .dropdown-menu ul, body .dropdown-menu a.dropdown-item {
   width: 100%;
   height: 100%;
 }
 
-html .navbar-expand-lg ul li, body .navbar-expand-lg ul li {
+html .navbar-expand-lg ul li, html .navbar-expand-lg ul a, html .navbar-expand-lg a.dropdown-item li, html .navbar-expand-lg a.dropdown-item a, html .dropdown-menu ul li, html .dropdown-menu ul a, html .dropdown-menu a.dropdown-item li, html .dropdown-menu a.dropdown-item a, body .navbar-expand-lg ul li, body .navbar-expand-lg ul a, body .navbar-expand-lg a.dropdown-item li, body .navbar-expand-lg a.dropdown-item a, body .dropdown-menu ul li, body .dropdown-menu ul a, body .dropdown-menu a.dropdown-item li, body .dropdown-menu a.dropdown-item a {
   min-height: 65px;
   display: table;
 }
 
-html .navbar-expand-lg ul li a, body .navbar-expand-lg ul li a {
+html .navbar-expand-lg ul li a, html .navbar-expand-lg ul a a, html .navbar-expand-lg a.dropdown-item li a, html .navbar-expand-lg a.dropdown-item a a, html .dropdown-menu ul li a, html .dropdown-menu ul a a, html .dropdown-menu a.dropdown-item li a, html .dropdown-menu a.dropdown-item a a, body .navbar-expand-lg ul li a, body .navbar-expand-lg ul a a, body .navbar-expand-lg a.dropdown-item li a, body .navbar-expand-lg a.dropdown-item a a, body .dropdown-menu ul li a, body .dropdown-menu ul a a, body .dropdown-menu a.dropdown-item li a, body .dropdown-menu a.dropdown-item a a {
   font-size: 25px;
   height: 100%;
   padding: 0;
@@ -35,9 +36,25 @@ html .navbar-expand-lg ul li a, body .navbar-expand-lg ul li a {
   color: #ffdb57 !important;
 }
 
-html .navbar-expand-lg ul li:hover, body .navbar-expand-lg ul li:hover {
+html .navbar-expand-lg ul li:hover, html .navbar-expand-lg a.dropdown-item li:hover, html .dropdown-menu ul li:hover, html .dropdown-menu a.dropdown-item li:hover, body .navbar-expand-lg ul li:hover, body .navbar-expand-lg a.dropdown-item li:hover, body .dropdown-menu ul li:hover, body .dropdown-menu a.dropdown-item li:hover {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#1d1d1f), color-stop(#4c5253), color-stop(#5c6464), color-stop(#6b7675), color-stop(#2d2f30), to(#3c4042));
   background-image: linear-gradient(to top, #1d1d1f, #4c5253, #5c6464, #6b7675, #2d2f30, #3c4042);
+}
+
+html .navbar-expand-lg ul .dropdown-divider, html .navbar-expand-lg a.dropdown-item .dropdown-divider, html .dropdown-menu ul .dropdown-divider, html .dropdown-menu a.dropdown-item .dropdown-divider, body .navbar-expand-lg ul .dropdown-divider, body .navbar-expand-lg a.dropdown-item .dropdown-divider, body .dropdown-menu ul .dropdown-divider, body .dropdown-menu a.dropdown-item .dropdown-divider {
+  margin: 0;
+}
+
+html .navbar-expand-lg a.dropdown-item:hover, html .dropdown-menu a.dropdown-item:hover, body .navbar-expand-lg a.dropdown-item:hover, body .dropdown-menu a.dropdown-item:hover {
+  display: block;
+  width: 100% !important;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#3c4042), color-stop(#4c5253), color-stop(#5c6464), color-stop(#6b7675), color-stop(#2d2f30), to(#1d1d1f));
+  background-image: linear-gradient(to top, #3c4042, #4c5253, #5c6464, #6b7675, #2d2f30, #1d1d1f);
+}
+
+html .navbar-expand-lg a.dropdown-item, html .dropdown-menu a.dropdown-item, body .navbar-expand-lg a.dropdown-item, body .dropdown-menu a.dropdown-item {
+  width: 100% !important;
+  display: block;
 }
 
 html .paginationHTML a, body .paginationHTML a {
@@ -53,7 +70,6 @@ html .error, body .error {
   font-size: 25px;
   text-align: center;
   color: red;
-  height: 100%;
   padding-top: 25%;
 }
 /*# sourceMappingURL=style.css.map */
