--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,21 +1,22 @@
 html, body {
     background-image: linear-gradient(to top, rgb(76, 83, 168), rgb(97, 112, 178), rgb(118, 141, 189), rgb(140, 169, 199), rgb(161, 198, 210), rgb(182, 227, 220), rgb(161, 202, 216), rgb(141, 176, 211), rgb(120, 151, 207), rgb(99, 125, 203), rgb(79, 100, 198), rgb(58, 74, 194));
     background-repeat: no-repeat;
+    background-attachment: fixed; 
     width: 100%;
     height: 100%;
     background-size: cover;
     font-family: 'Pangolin', cursive !important;
 
-    .navbar-expand-lg {
+    .navbar-expand-lg, .dropdown-menu {
         background-image: linear-gradient(to top,rgb(60, 64, 66),rgb(76, 82, 83),rgb(92, 100, 100),rgb(107, 118, 117),rgb(45, 47, 48),rgb(29, 29, 31));
         padding: 0 !important;
         font-family: 'Ruslan Display', cursive; 
         
 
-        ul {
+        ul, a.dropdown-item {
             width: 100%;
             height: 100%;
-            li {
+            li, a {
                 min-height: 65px;
                 display: table;
                 a {
@@ -29,16 +30,29 @@ html, body {
                 }
             }
 
-            li:hover {
+            li:hover{
                 background-image: linear-gradient(to top,rgb(29, 29, 31), rgb(76, 82, 83),rgb(92, 100, 100),rgb(107, 118, 117),rgb(45, 47, 48), rgb(60, 64, 66));
 
             }
+            .dropdown-divider{
+                margin: 0;
+            }
+            
+        }
 
-            
-            
+        a.dropdown-item:hover {
+            display: block;
+            width: 100% !important;
+            background-image: linear-gradient(to top,rgb(60, 64, 66),rgb(76, 82, 83),rgb(92, 100, 100),rgb(107, 118, 117),rgb(45, 47, 48),rgb(29, 29, 31));
+        }
+
+        a.dropdown-item {
+           width: 100% !important;
+           display: block;
         }
     
     }
+
 
     .paginationHTML {
         a {
