--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,78 +1,102 @@
-html, body {
-    background-image: linear-gradient(to top, rgb(76, 83, 168), rgb(97, 112, 178), rgb(118, 141, 189), rgb(140, 169, 199), rgb(161, 198, 210), rgb(182, 227, 220), rgb(161, 202, 216), rgb(141, 176, 211), rgb(120, 151, 207), rgb(99, 125, 203), rgb(79, 100, 198), rgb(58, 74, 194));
-    background-repeat: no-repeat;
-    background-attachment: fixed; 
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    font-family: 'Pangolin', cursive !important;
+html,
+body {
+	background-image: url('bild.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	color: rgb(220, 226, 226) !important;
+	font-family: 'Pangolin', cursive !important;
 
-    .navbar-expand-lg, .dropdown-menu {
-        background-image: linear-gradient(to top,rgb(60, 64, 66),rgb(76, 82, 83),rgb(92, 100, 100),rgb(107, 118, 117),rgb(45, 47, 48),rgb(29, 29, 31));
-        padding: 0 !important;
-        font-family: 'Ruslan Display', cursive; 
-        
+	.navbar-expand-lg,
+	.dropdown-menu {
+		background-image: linear-gradient(
+			to top,
+			rgb(60, 64, 66),
+			rgb(76, 82, 83),
+			rgb(92, 100, 100),
+			rgb(107, 118, 117),
+			rgb(45, 47, 48),
+			rgb(29, 29, 31)
+		);
+		padding: 0 !important;
+		font-family: 'Ruslan Display', cursive;
 
-        ul, a.dropdown-item {
-            width: 100%;
-            height: 100%;
-            li, a {
-                min-height: 65px;
-                display: table;
-                a {
-                    font-size: 25px;
-                    height: 100%;
-                    padding: 0;
-                    display: table-cell;
-                    text-align: center;
-                    vertical-align: middle;
-                    color: hsl(47, 100%, 67%) !important;
-                }
-            }
+		ul,
+		a.dropdown-item {
+			width: 100%;
+			height: 100%;
+			li,
+			a {
+				min-height: 65px;
+				display: table;
+				a {
+					font-size: 20px;
+					height: 100%;
+					padding: 0;
+					display: table-cell;
+					text-align: center;
+					vertical-align: middle;
+					color: hsl(47, 100%, 67%) !important;
+				}
+			}
 
-            li:hover{
-                background-image: linear-gradient(to top,rgb(29, 29, 31), rgb(76, 82, 83),rgb(92, 100, 100),rgb(107, 118, 117),rgb(45, 47, 48), rgb(60, 64, 66));
+			li:hover {
+				background-image: linear-gradient(
+					to top,
+					rgb(29, 29, 31),
+					rgb(76, 82, 83),
+					rgb(92, 100, 100),
+					rgb(107, 118, 117),
+					rgb(45, 47, 48),
+					rgb(60, 64, 66)
+				);
+			}
+			.dropdown-divider {
+				margin: 0;
+			}
+		}
 
-            }
-            .dropdown-divider{
-                margin: 0;
-            }
-            
-        }
+		a.dropdown-item:hover {
+			display: block;
+			width: 100% !important;
+			background-image: linear-gradient(
+				to top,
+				rgb(60, 64, 66),
+				rgb(76, 82, 83),
+				rgb(92, 100, 100),
+				rgb(107, 118, 117),
+				rgb(45, 47, 48),
+				rgb(29, 29, 31)
+			);
+		}
 
-        a.dropdown-item:hover {
-            display: block;
-            width: 100% !important;
-            background-image: linear-gradient(to top,rgb(60, 64, 66),rgb(76, 82, 83),rgb(92, 100, 100),rgb(107, 118, 117),rgb(45, 47, 48),rgb(29, 29, 31));
-        }
+		a.dropdown-item {
+			width: 100% !important;
+			display: block;
+		}
+	}
 
-        a.dropdown-item {
-           width: 100% !important;
-           display: block;
-        }
-    
-    }
+	.paginationHTML {
+		a {
+			background-color: rgba(61, 61, 61, 0.932) !important;
+			margin: 3px;
+			border: none !important;
+			color: hsl(330, 1%, 45%) !important;
+			font-size: 20px;
+			font-weight: bold;
+		}
 
+		a:hover {
+			background-color: rgb(2, 2, 2) !important;
+		}
+	}
 
-    .paginationHTML {
-        a {
-            background-color: rgba(248, 248, 248, 0) !important;
-            margin: 3px;
-            border: none !important;
-            color: hsl(308, 43%, 26%) !important;
-            font-size: 20px;
-            font-weight: bold;
-
-        }
-        
-    }
-
-    .error {
-        font-size: 25px;
-        text-align: center;
-        color: red;
-        padding-top: 25%;
-        
-    }
-
+	.error {
+		font-size: 25px;
+		text-align: center;
+		color: red;
+		padding-top: 25%;
+	}
 }
